using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public class EnemyTags 
{
    public const string ENEMY_TAG = "Enemy";

    public const string IS_WALKING_ANIMATOR_PARAMETER = "isWalking";
    public const string IS_RUNNING_ANIMATOR_PARAMETER = "isRunning";
    public const string WANT_TO_ATTACK_ANIMATOR_PARAMETER = "wantToAttack";
    public const string IS_DEAD_ANIMATOR_PARAMETER = "isDead";
}
